<resources>
    <string name="app_name">Now</string>
    <string name="title_home">홈</string>
    <string name="title_notes">모아보기</string>
    <string name="title_favorites">즐겨찾기</string>
    <string name="title_profile">프로필</string>

    <string name="email_address">이메일 주소</string>
    <string name="password">비밀번호</string>

    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
</resources>